<resources>
    <string name="app_name">In And Out Burger</string>
    <string name="title_order_textview">Place an Order</string>
    <string name="menu1">Double Double $360</string>
    <string name="menu2">Cheeseburger $2.15</string>
    <string name="menu3">French Fries $1.65</string>
    <string name="menu4">Shakes $2.20</string>
    <string name="menu_pick_size">Fountain Drink (pick size)</string>
    <string name="small_size">Small $1.45</string>
    <string name="medium_size">Medium $1.55</string>
    <string name="large_size">Large $1.75</string>
    <string name="place_order_button">PLACE ORDER</string>
    <string name="order_total_text">Order Total $</string>
    <string name="number_item_ordered_text">Items Ordered:</string>
    <string name="subtotal_text">Subtotal: $</string>
    <string name="tax_text">Tax (8%): $</string>
    <string name="start_new_order_button">START NEW ORDER</string>
</resources>
