<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.longtruong.cs273.ltruong58.inandoutburger.OrderActivity"
    android:background="@drawable/order_background">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_order_textview"
        android:id="@+id/titleTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:gravity="center"
        android:padding="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu1"
        android:id="@+id/menu1TextView"
        android:layout_row="1"
        android:layout_column="0"
        android:gravity="right"
        android:padding="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu2"
        android:id="@+id/menu2TextView"
        android:layout_row="2"
        android:layout_column="0"
        android:padding="8dp"
        android:layout_columnSpan="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu3"
        android:id="@+id/menu3TextView"
        android:layout_row="3"
        android:layout_column="0"
        android:padding="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu4"
        android:id="@+id/menu4TextView"
        android:layout_row="4"
        android:layout_column="0"
        android:padding="8dp"
        android:textAlignment="gravity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_pick_size"
        android:id="@+id/pickSizeTextView"
        android:layout_row="5"
        android:layout_column="0"
        android:padding="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/small_size"
        android:id="@+id/smallSizeTextView"
        android:layout_row="6"
        android:layout_column="0"
        android:padding="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_size"
        android:id="@+id/mediumSizeTextView"
        android:layout_row="7"
        android:layout_column="0"
        android:padding="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/large_size"
        android:id="@+id/largeSizeTextView"
        android:layout_row="8"
        android:layout_column="0"
        android:padding="8dp" />
</GridLayout>
